syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/stats";
package messages.stats;

message Response {
	int64 users = 1;
	int64 channels = 2;
	int64 commands = 3;
	int64 messages = 4;
	int64 used_emotes = 5;
	int64 used_commands = 6;
}

message GetTwirStreamersResponse {
	message Streamer {
		string user_id = 1;
		string user_login = 2;
		string user_display_name = 3;
		string avatar = 4;
		int32 followers_count = 5;
		bool is_live = 6;
		bool is_partner = 7;
	}

	repeated Streamer streamers = 1;
}
